--- a/index.html
+++ b/index.html
@@ -525,81 +525,39 @@
 
     const url = window.location.origin + '/' + sockId;
 
-    // === ПЕРСОНАЛИЗИРОВАННЫЙ БАННЕР ===
+    // === Простой баннер для дележа ===
     document.getElementById('app').innerHTML = `
       <div class="success">
         <h2>${t('successTitle')}</h2>
         <p>${t('successDesc')}</p>
-        <div id="sockUrl" style="background:white;padding:12px;border-radius:8px;margin:15px 0;word-break:break-all;">${url}</div>
-        <button id="copyBtn">${t('copyBtn')}</button>
-        <p style="margin-top:15px;font-size:14px;color:#666;">${t('share')}</p>
-
-        <!-- Баннер -->
-        <div style="text-align: center; margin-top: 40px;">
-          <div style="position: relative; display: inline-block;">
-            <a href="${url}" target="_blank" style="display: block;">
-              <img src="./create-sock-banner.gif" 
-                   alt="Создай свой носок и поздравь меня!" 
-                   id="bannerImage"
-                   style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); cursor: pointer;">
-            </a>
-            <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.7);">
-              Поздравь меня!
-            </div>
-          </div>
-
-          <!-- Кнопки -->
-          <div style="margin-top: 20px; display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
-            <button id="copyBannerBtn" style="padding: 8px 16px; background: #3498db; color: white; border: none; border-radius: 6px; cursor: pointer;">
-              💾 Скопировать ссылку
-            </button>
-            <button id="saveBannerBtn" style="padding: 8px 16px; background: #e74c3c; color: white; border: none; border-radius: 6px; cursor: pointer;">
-              🖼️ Сохранить как изображение
-            </button>
-          </div>
+        <div style="text-align: center; margin: 20px 0;">
+          <a href="${url}" target="_blank">
+            <img src="./create-sock-banner.gif" 
+                 alt="Создай свой рождественский носок!" 
+                 style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+          </a>
         </div>
+
+        <p style="margin: 15px 0; font-size: 16px; color: #fff;">
+          🎁 Чтобы поделиться — сделай 2 простых шага:
+        </p>
+        <ol style="text-align: left; padding: 0 20px; color: #fff; font-size: 15px; line-height: 1.6;">
+          <li>Нажми и удерживай картинку → выбери <strong>«Сохранить изображение»</strong></li>
+          <li>Опубликуй её и добавь ссылку в описание:</li>
+        </ol>
+
+        <div id="sockUrl" style="background:white;padding:12px;border-radius:8px;margin:15px 0;word-break:break-all;">${url}</div>
+        <button id="copyBtn" style="margin-top:10px;">${t('copyBtn')}</button>
+        <p style="margin-top:15px;font-size:14px;color:#666;">Ссылка ведёт прямо к твоему носку!</p>
       </div>
     `;
 
-    // Скопировать обычную ссылку
     document.getElementById('copyBtn').addEventListener('click', () => {
       navigator.clipboard.writeText(url).then(() => {
-        alert('✅ Ссылка скопирована!');
+        alert('✅ Ссылка скопирована! Вставь её в описание к посту.');
       }).catch(err => {
         alert('Не удалось скопировать');
       });
-    });
-
-    // Скопировать ссылку баннера (та же)
-    document.getElementById('copyBannerBtn').addEventListener('click', () => {
-      navigator.clipboard.writeText(url).then(() => {
-        alert('✅ Ссылка на твой носок скопирована!');
-      }).catch(err => {
-        alert('Не удалось скопировать');
-      });
-    });
-
-    // Сохранить баннер как изображение
-    document.getElementById('saveBannerBtn').addEventListener('click', async () => {
-      const img = document.getElementById('bannerImage');
-      const canvas = document.createElement('canvas');
-      const ctx = canvas.getContext('2d');
-
-      canvas.width = img.naturalWidth || img.width;
-      canvas.height = img.naturalHeight || img.height;
-
-      ctx.drawImage(img, 0, 0);
-      ctx.font = 'bold 24px Arial';
-      ctx.fillStyle = 'white';
-      ctx.textAlign = 'center';
-      ctx.fillText('Поздравь меня!', canvas.width / 2, canvas.height / 2);
-
-      canvas.toBlob((blob) => {
-        const link = document.createElement('a');
-        link.download = 'my-christmas-sock.png';
-        link.href = URL.createObjectURL(blob);
-        link.click();
-      }, 'image/png');
     });
   }
 
