--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         
         <div style="text-align: center; margin: 20px 0;">
           <a href="${url}" target="_blank">
-            <img src="./create-sock-banner.gif" 
+            <img src="./create-sock-banner.mp4" 
                  alt="Создай свой рождественский носок!" 
                  id="bannerImage"
                  style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
@@ -822,3 +822,4 @@
 
 </body>
 </html>
+
